code/test/Listings/numbers.lst
C51 COMPILER V9.60.0.0   NUMBERS                                                           08/07/2020 00:29:33 PAGE 1   


C51 COMPILER V9.60.0.0, COMPILATION OF MODULE NUMBERS
OBJECT MODULE PLACED IN .\Objects\numbers.obj
COMPILER INVOKED BY: C:\Program Files\Keil\C51\BIN\C51.EXE ..\hc\numbers.c OPTIMIZE(8,SPEED) BROWSE INCDIR(..\h) DEBUG O
                    -BJECTEXTEND PRINT(.\Listings\numbers.lst) OBJECT(.\Objects\numbers.obj)

line level    source

   1          #include <reg51.h>
   2          
   3          static char display_cache[4], dot_cache;
   4          
   5          // which:0~3
   6          void select(char which) {
   7   1          switch (which) {
   8   2              case 0:
   9   2                  P2 = 0x88;
  10   2                  break;
  11   2              case 1:
  12   2                  P2 = 0x48;
  13   2                  break;
  14   2              case 2:
  15   2                  P2 = 0x28;
  16   2                  break;
  17   2              case 3:
  18   2                  P2 = 0x18;
  19   2                  break;
  20   2          }
  21   1      }
  22          
  23          void show(char num, bit dot) {
  24   1          switch (num) {
  25   2              case -2:
  26   2                  P0 = 0x79;  // error
  27   2                  break;
  28   2              case -1:
  29   2                  P0 = 0x00;  // empty
  30   2                  break;
  31   2              case 0:
  32   2                  P0 = 0x3f;
  33   2                  break;
  34   2              case 1:
  35   2                  P0 = 0x06;
  36   2                  break;
  37   2              case 2:
  38   2                  P0 = 0x5b;
  39   2                  break;
  40   2              case 3:
  41   2                  P0 = 0x4f;
  42   2                  break;
  43   2              case 4:
  44   2                  P0 = 0x66;
  45   2                  break;
  46   2              case 5:
  47   2                  P0 = 0x6d;
  48   2                  break;
  49   2              case 6:
  50   2                  P0 = 0x7d;
  51   2                  break;
  52   2              case 7:
  53   2                  P0 = 0x07;
  54   2                  break;
C51 COMPILER V9.60.0.0   NUMBERS                                                           08/07/2020 00:29:33 PAGE 2   

  55   2              case 8:
  56   2                  P0 = 0x7f;
  57   2                  break;
  58   2              case 9:
  59   2                  P0 = 0x6f;
  60   2                  break;
  61   2              case 10:
  62   2                  P0 = 0x40;  // -
  63   2                  break;
  64   2          }
  65   1          if (dot) {
  66   2              P0 += 0x80;
  67   2          }
  68   1      }
  69          
  70          void load_i(int num) {
  71   1          char w = 0;
  72   1          dot_cache = -1;
  73   1          display_cache[0] = display_cache[1] = display_cache[2] = display_cache[3] =
  74   1              -1;
  75   1          if (num < 0) {
  76   2              num = -num;
  77   2              while (num != 0) {
  78   3                  if (w == 3) {
  79   4                      goto overflow;
  80   4                  }
  81   3                  display_cache[w++] = num % 10;
  82   3                  num /= 10;
  83   3              }
  84   2              display_cache[w] = 10;  // -
  85   2          } else if (num == 0) {
  86   2              display_cache[0] = 0;
  87   2          } else {
  88   2              while (num != 0) {
  89   3                  if (w == 4) {
  90   4                      goto overflow;
  91   4                  }
  92   3                  display_cache[w++] = num % 10;
  93   3                  num /= 10;
  94   3              }
  95   2          }
  96   1          return;
  97   1      overflow:
  98   1          display_cache[0] = -2;
  99   1      }
 100          
 101          void load_f(float num) {}
*** WARNING C280 IN LINE 101 OF ..\hc\numbers.c: 'num': unreferenced local variable
 102          
 103          void display() {
 104   1          char w = 0;
 105   1          if (display_cache[0] == -2) {
 106   2              select(0);
 107   2              show(-2, 0);
 108   2          } else {
 109   2              while (1) {
 110   3                  show(-1, 0);
 111   3                  select(w);
 112   3                  show(display_cache[w], (dot_cache == w) ? 1 : 0);
 113   3                  w++;
 114   3                  if (w == 4) {
 115   4                      w = 0;
C51 COMPILER V9.60.0.0   NUMBERS                                                           08/07/2020 00:29:33 PAGE 3   

 116   4                  }
 117   3              }
 118   2          }
 119   1      }


MODULE INFORMATION:   STATIC OVERLAYABLE
   CODE SIZE        =    411    ----
   CONSTANT SIZE    =   ----    ----
   XDATA SIZE       =   ----    ----
   PDATA SIZE       =   ----    ----
   DATA SIZE        =      5       5
   IDATA SIZE       =   ----    ----
   BIT SIZE         =   ----       1
END OF MODULE INFORMATION.


C51 COMPILATION COMPLETE.  1 WARNING(S),  0 ERROR(S)
